# agent-cfi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.agent-cfi/: baseline.json
.github/workflows/: agent-cfi.yml  test.yml
examples/: config.yaml  demo.py  probe_agent.py
src/agent_cfi/: __init__.py  cli.py  fuzz.py  graph.py  mcp.py  probes.py  sarif.py  taint.py  tracer.py
src/agent_cfi/probes/: probes.yaml
tests/: test_cli.py  test_fuzz.py  test_graph.py  test_mcp.py  test_taint.py  test_tracers.py  test_visualize.py
